# algo

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: test.yml
.verify-helper/: config.toml
DSU/: DSU.h
Graph/2SAT/: SATSolver.cpp  SATSolver.h
Graph/ArticulationPointsAndBiconnectedComponents/: APBC.cpp  APBC.h
Graph/Assignment/: Assignment.h
Graph/BridgesAndBiconnectedComponents/: BBC.cpp
Graph/BridgesAndTwo-EdgeConnectedComponents/: B2ECC.cpp  B2ECC.h
Graph/CycleDetection/: CycleFinder.cpp  CycleFinder.h
Graph/EulerianCycleAndPath/: EulerianCycleFinder.h  EulerianFinder.h
Graph/Heavy-light decomposition/: Heavy-light decomposition.h
Graph/HeavyLightDecomposition/: HeavyLightdecomposition.h
Graph/LCA/: LCA.h  LCAonSparseTable.h
Graph/MaxFlowAndMinCut/: Dinic.h  EdmondsKapr.h  FordFulkerson.h
Graph/MaximumMatching/: Kuhn.h
Graph/MinimumSpanningTree/: MST.h
Graph/ShortestPath/: Dijkstra.h  FloydWarshall.h  FordBellman.h
Graph/StronglyConnectedComponents/: SCC.cpp  SCC.h
Graph/Utils/: Edge.h  LCAonSparseTable.h  Node.h  SumSegmentTree.h
LinearAlgebra/Matrix/: Matrix.h
NumberTheory/Factorials/: Factorial.h
NumberTheory/Factorization/: Pollard.h
NumberTheory/PrimalityTest/: Fermat.h  MillerRabin.h
NumberTheory/Sequences/: Sequences.h
NumberTheory/Utils/: Binomial.h  Factorial.h  FactorialFast.h  Factrorial.h  Gcd.h  Mint.h  Modint.h  Quotient.h
Polynomials/FFT/: FFT.h
SegmentTree/: SegmentTree.h
SparseTable/: SparceTable.h
Utils/: Binpow.h  Rng.h
test/: SegmentTree.test.cpp
(+104 files in other folders)
